# mcp-gtd

./: .gitignore  .pre-commit-config.yaml  2025-08-04-caveat-the-messages-below-were-generated-by-the-u.txt  CLAUDE.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.agent-os/product/: decisions.md  mission-lite.md  mission.md  roadmap.md  tech-stack.md
.agent-os/specs/2025-08-03-foundation-setup/: spec-lite.md  spec.md  tasks.md
.agent-os/specs/2025-08-03-foundation-setup/sub-specs/: mcp-best-practices.md  technical-spec.md
.agent-os/specs/2025-08-03-phase0-completion/: spec-lite.md  spec.md  tasks.md
.agent-os/specs/2025-08-03-phase0-completion/sub-specs/: database-schema.md  technical-spec.md
.github/: ENVIRONMENT_SETUP.md  GITHUB_ACTIONS_GUIDE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  pr.yml  release-prep.yml  release.yml
.serena/: project.yml
.serena/cache/python/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: code_style_conventions.md  project_architecture.md  project_overview.md  suggested_commands.md  task_completion_checklist.md  tech_stack.md
src/gtd_manager/: __init__.py  database.py  decorators.py  errors.py  repositories.py  server.py
src/gtd_manager/migrations/: __init__.py  base.py  initial_schema.py  manager.py
src/gtd_manager/models/: __init__.py  action.py  base.py  context.py  enums.py  project.py  relationships.py  stakeholder.py
tests/: test_database.py  test_decorators.py  test_errors.py  test_fastmcp_server.py  test_gtd_integration.py  test_hello_world_enhancements.py  test_mcp_protocol.py  test_models.py  test_package_structure.py  test_repositories.py  test_server_enhancements.py  test_server_integration.py  test_server_specific_enhancements.py  test_tool_registry.py
